[package]
name = "slp-htlc"
version = "0.1.0"
authors = ["tobiasruck <ruck.tobias@gmail.com>"]
edition = "2018"


[dependencies]
bitcoin-cash = "1.0.0-beta.0"
bitcoin-cash-ecc = "1.0.0-beta.0"
bitcoin-cash-slp = "1.0.0-beta.0"
bitcoin = "0.25.2"
clap = "3.0.0-beta.2"
hex = "0.4.2"
chttp = "0.5.5"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
anyhow = "1.0.35"
rand = "0.7.3"
